work on home and about page

--- a/about.html
+++ b/about.html
@@ -28,8 +28,8 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
-            <li><a href="#"><i class="fa fa-info-circle" aria-hidden="true"></i> About</a></li>
+            <li><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+            <li class="active"><a href="#"><i class="fa fa-info-circle" aria-hidden="true"></i> About</a></li>
 
             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"
                 role="button" aria-haspopup="true"
@@ -103,7 +103,7 @@
             </div>
             <div class="col-xs-12 col-sm-2">
                 <p style="padding: 40px;"></p>
-                <a type="button" class="btn btn-warning btn-block reserve" href="#reservation">Reserve Table</a>
+                <a type="button" class="btn btn-warning btn-block reserve" href="#reservation">Book a Table</a>
             </div>
         </div>
     </div>
@@ -200,7 +200,7 @@
                                 </div>
                                  <div id="ingredients" class="row row-content">
                 <div class="col-xs-12 col-sm-6 col-lg-8">
-                    <h1>Our ingredients</h1>
+                    <h1>Ingredients</h1>
 
                     <p>Bacon ipsum dolor amet meatloaf cupim ground round strip steak, 
                         sausage turducken bacon beef ribs corned beef frankfurter turkey filet mignon. Fatback doner ham ham hock turducken. 
@@ -224,6 +224,44 @@
                            <img src="images/ingredients.jpg" style="width: 100%;">
                         </div>
                     </div>
+                    <br>
+                    <br>
+                                      <div id="about-thailand" class="row row-content">
+                <div class="col-xs-12 col-sm-6 col-lg-8">
+                    <h1>About Thailand</h1>
+                    <p>Bacon ipsum dolor amet meatloaf cupim ground round strip steak, 
+                        sausage turducken bacon beef ribs corned beef frankfurter turkey filet mignon. Fatback doner ham ham hock turducken. 
+                        Swine turkey pig strip steak shankle biltong. Ball tip cupim ground round, capicola pancetta t-bone short loin chicken 
+                        ham hock kielbasa filet mignon cow pork belly.
+                        Pork cupim jerky capicola filet mignon. Bacon ribeye kevin prosciutto shoulder flank jowl venison.</p>
+                    <p>Bacon ipsum dolor amet meatloaf cupim ground round strip steak, 
+                        sausage turducken bacon beef ribs corned beef frankfurter turkey filet mignon. Fatback doner ham ham hock turducken. 
+                        Swine turkey pig strip steak shankle biltong. Ball tip cupim ground round, capicola pancetta t-bone short loin chicken 
+                        ham hock kielbasa filet mignon cow pork belly.
+                        Pork cupim jerky capicola filet mignon. Bacon ribeye kevin prosciutto shoulder flank jowl venison.</p>
+                        
+                    <p>Bacon ipsum dolor amet meatloaf cupim ground round strip steak, 
+                        sausage turducken bacon beef ribs corned beef frankfurter turkey filet mignon. Fatback doner ham ham hock turducken. 
+                        Swine turkey pig strip steak shankle biltong. Ball tip cupim ground round, capicola pancetta t-bone short loin chicken 
+                        ham hock kielbasa filet mignon cow pork belly.
+                        Pork cupim jerky capicola filet mignon. Bacon ribeye kevin prosciutto shoulder flank jowl venison.</p>
+                    
+                    <p>Bacon ipsum dolor amet meatloaf cupim ground round strip steak, 
+                        sausage turducken bacon beef ribs corned beef frankfurter turkey filet mignon. Fatback doner ham ham hock turducken. 
+                        Swine turkey pig strip steak shankle biltong. Ball tip cupim ground round, capicola pancetta t-bone short loin chicken 
+                        ham hock kielbasa filet mignon cow pork belly.
+                        Pork cupim jerky capicola filet mignon. Bacon ribeye kevin prosciutto shoulder flank jowl venison.</p>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-lg-4">
+                           <img src="images/thailand.jpg" style="width: 100%;">
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-lg-4">
+                           <img src="images/thailand1.jpg" style="width: 100%;">
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-lg-4">
+                           <img src="images/thailand2.jpg" style="width: 100%;">
+                        </div>
+                    </div>
 
                             </div>
 
@@ -231,11 +269,14 @@
                                 <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="400">
                                     <li><a href="#history">Our History</a></li>
                                     <li><a href="#staff">Staff</a></li>   
-                                    <li><a href="#ingredients">Ingredients</a></li>                 
+                                    <li><a href="#ingredients">Ingredients</a></li>    
+                                     <li><a href="#about-thailand">About Thailand</a>             
                                 </ul>
                             </nav>
                         </div>
                     </div>
+                    <br>
+                    <br>
                   <footer>
             <div class="container">
                 <div class="row">             
