--- a/index.html
+++ b/index.html
@@ -104,30 +104,38 @@
             </div>
             <div class="col-xs-12 col-sm-2">
                 <p style="padding: 40px;"></p>
-                <a type="button" class="btn btn-warning btn-block reserve" href="#reservation">Reserve Table</a>
+                <a type="button" class="btn btn-warning btn reserve" href="#reservation">Book a Table</a>
             </div>
         </div>
     </div>
 </header>
 <div class="container_home_page">
     <div class="row ">
+    <a href="menu.html">
        <div class="col-xs-12 col-sm-3 images">
       <img class="menu-img img-thumbnail" src="images/starter.jpg" alt="Starters" >
       <h1 class="menu-items">Starters</h1>
     </div>
+    </a>
+    <a href="menu.html">
     <div class="col-xs-12 col-sm-3 images">
         
         <img class="menu-img img-thumbnail"  src="images/salad.jpg" alt="Salads">
         <h1 class="menu-items">Salads</h1>
     </div>
+    </a>
+    <a href="menu.html">
     <div class="col-xs-12 col-sm-3 images">
         <img class="menu-img img-thumbnail" src="images/green-curry.jpg" alt="Mains">
         <h1 class="menu-items">Mains</h1>
     </div>
+    </a>
+    <a href="menu.html">
     <div class="col-xs-12 col-sm-3 images">
         <img  class="menu-img img-thumbnail"  src="images/desserts.jpg" alt="Desserts" >
         <h1 class="menu-items">Desserts</h1>
     </div>
+    </a>
 </div>
 </div>
 <div class="container">
@@ -198,6 +206,7 @@
         </div>
     </div>
 </div>
+<br>
 <footer>
     <div class="container">
         <div class="row">             
