--- a/menu.html
+++ b/menu.html
@@ -28,7 +28,7 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+            <li><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
             <li><a href="about.html"><i class="fa fa-info-circle" aria-hidden="true"></i> About</a></li>
 
             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"
@@ -103,7 +103,7 @@
             </div>
             <div class="col-xs-12 col-sm-2">
                 <p style="padding: 40px;"></p>
-                <a type="button" class="btn btn-warning btn-block reserve" href="#reservation">Reserve Table</a>
+                <a type="button" class="btn btn-warning btn-block reserve" href="#reservation">Book a Table</a>
             </div>
         </div>
     </div>
