contact page finished

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/css.css">
 </head>
 <body>
-   <nav class="navbar navbar-inverse navbar-fixed-top">
+ <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed"
@@ -112,80 +112,64 @@
 <!-- Main component for a primary marketing message or call to action -->
 
 <div class="container">
-
-    <div class="row">
-      <div align="center" class="calls col-xs-12 col-sm-12 ">
-        <div class="btn-group" role="group" aria-label="...">
-            <a type="button" class="btn btn-primary" href="tel:+4478965478"><i class="fa fa-phone "> Call</i></a>
-            <a type="button" class="btn btn-info" href="tel:+4478965478"><i class="fa fa-skype "> Skype</i></a>
-            <a type="button" class="btn btn-success" href="gp@gmail.com"><i class="fa fa-envelope-o "> Mail us</i></a>
-        </div>
-    </div>
-    
-
-    <div class="col-xs-12 col-sm-6 col-md-5">
-        <h5>Where to find us</h5>
-        <address>
-          <i class="fa fa-map-marker" aria-hidden="true"></i>  121, Waters Road LONDON<br>
-          <i class="fa fa-phone "></i>  +44 1234 5678<br>
-          <i class="fa fa-envelope-o "></i>thaifoodexperience@food.net
-        </address>
-    </div>
-
-    <div class="col-xs-12 col-sm-6 col-sm-offset-1">
-       
+   <div class="row">
+       <div class="col-xs-12 col-sm-12 ">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2487.298087673912!2d0.005529715068334077!3d51.43431932386602!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a9f905335637%3A0x3926877fda2dee79!2s121+Waters+Rd%2C+London+SE6+1UJ!5e0!3m2!1sen!2suk!4v1501872080058" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-
     </div> 
-
-
     <div class="row row-content">
-        <div class="col-xs-12">
+        <div class="row">
+           <div class="col-xs-12">
             <h3 align="center">Get in touch</h3> 
         </div>
-        <div class="col-xs-12 col-sm-9">
-            <form class="form-horizontal" role="form">
-                <div class="form-group">
-                    <label for="firstname" class="col-sm-2 control-label">First Name</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="firstname"placeholder="Enter First Name">
-                    </div>
+        <div class="col-xs-12 col-sm-3" >
+            <h5>Where to find us</h5>
+            <address>
+              <p><i class="fa fa-map-marker" aria-hidden="true"></i>  121, Waters Road LONDON</p>
+              <p><i class="fa fa-phone "></i>  +44 1234 5678</p>
+              <p><i class="fa fa-envelope-o "></i>  thaifoodexperience@food.net</p>
+          </address>
+      </div>
+      <div class="col-xs-12 col-sm-9">
+        <form class="form-horizontal" role="form">
+            <div class="form-group">
+                <label for="firstname" class="col-sm-2 control-label">First Name</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="firstname"placeholder="Enter First Name">
                 </div>
-                <div class="form-group">
-                    <label for="lastname" class="col-sm-2 control-label">Last Name</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Enter Last Name">
-                    </div>
+            </div>
+            <div class="form-group">
+                <label for="lastname" class="col-sm-2 control-label">Last Name</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Enter Last Name">
                 </div>
-                <div class="form-group">
-                    <label for="telnum" class="col-sm-2 control-label">Contact No.</label>
-                    <div class="col-sm-10">
-                      <input type="tel" class="form-control" id="telnum" name="telnum" placeholder="Tel Number">
+            </div>
+            <div class="form-group">
+                <label for="telnum" class="col-sm-2 control-label">Contact No.</label>
+                <div class="col-sm-10">
+                  <input type="tel" class="form-control" id="telnum" name="telnum" placeholder="Tel Number">
 
-                  </div>
               </div>
-              <div class="form-group">
-                <label for="email" class="col-sm-2 control-label">Email</label>
-                <div class="col-sm-10">
-                    <input type="email" class="form-control" id="email" name="email" placeholder="Email">
-                </div>
+          </div>
+          <div class="form-group">
+            <label for="email" class="col-sm-2 control-label">Email</label>
+            <div class="col-sm-10">
+                <input type="email" class="form-control" id="email" name="email" placeholder="Email">
             </div>
-            <div class="form-group">
-                <label for="feedback" class="col-sm-2 control-label">Your Feedback</label>
-                <div class="col-sm-10">
-                    <textarea class="form-control" id="feedback" name="feedback" rows="12"></textarea>
-                </div>
+        </div>
+        <div class="form-group">
+            <label for="feedback" class="col-sm-2 control-label">Your Feedback</label>
+            <div class="col-sm-10">
+                <textarea class="form-control" id="feedback" name="feedback" rows="12"></textarea>
             </div>
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-primary">Send Us The Feedback</button>
-                </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-primary">Send</button>
             </div>
-        </form>
-    </div>
-    <div class="col-xs-12 col-sm-3">
-        <p style="padding:20px;"></p>
-    </div>
+        </div>
+    </form>
+</div>
+</div>
 </div>  
 </div>
 </div>
