work on menu.html

--- a/menu.html
+++ b/menu.html
@@ -113,24 +113,27 @@
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12">
             <div class="row">
-                <h2 class="col-xs-12 col-md-2">Starters</h2>
+            <div class="col-xs-12 col-md-2 menu-img">
+                <h2 class="menu-title">Starters</h2>
+                <img src="images/starter1.jpg" style="width: 100%;">
+                </div>
                 <div class="col-xs-12 col-md-10">
-                    <div class="col-xs-12  col-sm-6 col-md-6">
-                        <p class="food title"><span>CRISPY PRAWNS    </span><span class="pull-right">5.50</span></p>
+                    <div class="col-xs-12  col-sm-6 col-md-6 food">
+                        <p class="food-title"><span>CRISPY PRAWNS    </span><span class="pull-right">5.50</span></p>
 
                         <p>Coated in crispy breadcrumbs & deep-fried, served with Rosa’s sweet chilli sauce.</p>
                     </div>
-                    <div class="col-xs-12 col-sm-6 col-md-6">
+                    <div class="col-xs-12 col-sm-6 col-md-6 food">
                         <p class="food-title"><span>FRIED SPRING ROLLS</span><span class="pull-right">5</span></p>
                         <p>Deep fried rolls of vegetables & glass noodles, served with a Rosa’s sweet chilli sauce.</p>
 
                     </div>
-                    <div class="col-xs-12 col-sm-6  col-md-6">
+                    <div class="col-xs-12 col-sm-6  col-md-6 food">
                         <p class="food-title"><span>CHICKEN SATAY</span><span class="pull-right">4.75</span></p>
                         <p>Char-grilled succulent chicken in lemongrass marinade, served with a Rosa’s peanut sauce.</p>
 
                     </div>
-                    <div class="col-xs-12 col-sm-6 col-md-6">
+                    <div class="col-xs-12 col-sm-6 col-md-6 food">
                         <p class="food-title"><span>PORK SKEWERS</span><span class="pull-right">5</span></p>
                         <p>Char-grilled pork in soy and honey marinade, served with a Rosa’s tamarind dipping sauce.</p>
 
@@ -138,16 +141,23 @@
                 </div>
             </div>
         </div>
+        
+        <div class="clearfix"></div>
+        <div class="hr"></div>
+
         <div class="col-xs-12 col-sm-12 col-md-12">
             <div class="row">
-                <h2 class="col-xs-12 col-md-2">Salads</h2>
+            <div class="col-xs-12 col-md-2 menu-img">
+                <h2 class="menu-title">Salads</h2>
+                <img src="images/salad1.jpg" style="width: 100%;">
+                </div>
                 <div class="col-xs-12 col-md-10">
-                    <div class="col-xs-12  col-sm-6 col-md-6">
-                        <p class="food title"><span>SPICY BEEF SALAD    </span><span class="pull-right">9.50</span></p>
+                    <div class="col-xs-12  col-sm-6 col-md-6 food">
+                        <p class="food-title"><span>SPICY BEEF SALAD    </span><span class="pull-right">9.50</span></p>
 
                         <p>Char-grilled sirloin on spicy Thai salad, served with mint & chilli dressing.</p>
                     </div>
-                    <div class="col-xs-12 col-sm-6 col-md-6">
+                    <div class="col-xs-12 col-sm-6 col-md-6 food">
                         <p class="food-title"><span>PAPAYA SALAD</span><span class="pull-right">5</span></p>
                         <p>A spicy salad of four flavours made with raw papaya, long beans, tomatoes, dried shrimp & cashew nuts.</p>
 
@@ -155,70 +165,86 @@
                 </div>
             </div>
         </div>
+        <div class="clearfix"></div>
+        <div class="hr"></div>
         <div class="col-xs-12 col-sm-12 col-md-12">
             <div class="row">
-                <h2 class="col-xs-12 col-md-2">Mains</h2>
+            <div  class="col-xs-12 col-md-2 menu-img">
+                <h2 class="menu-title">Mains</h2>
+                <img src="images/main1.jpg" style="width: 100%;">
+                </div>
                 <div class="col-xs-12 col-md-10">
-                    <div class="col-xs-12  col-sm-6 col-md-6">
-                        <p class="food title"><span>BUTTERNUT RED CURRY</span><span class="pull-right">10</span></p>
+                    <div class="col-xs-12  col-sm-6 col-md-6 food">
+                        <p class="food-title"><span>BUTTERNUT RED CURRY</span><span class="pull-right">10</span></p>
 
                         <p>Signature red curry with butternut squash & sweet basil.</p>
                     </div>
 
-                    <div class="col-xs-12 col-sm-6  col-md-6 ">
+                    <div class="col-xs-12 col-sm-6  col-md-6 food ">
                         <p class="food-title"><span>BEEF MUSSAMAN CURRY</span><span class="pull-right">11.00</span></p>
                         <p>Smooth yellow curry with silk road spices, potatoes & cashew nuts</p>
                     </div>
-                    <div class="col-xs-12 col-sm-6  col-md-6 ">
+                    <div class="col-xs-12 col-sm-6  col-md-6 food">
                         <p class="food-title"><span>GREEN CURRY</span><span class="pull-right"></span></p>
                         <p>One of Thailand's most loved curries. With aubergine, bamboo shoots & sweet basil.</p>
                         <p class="food-title"><span>Veggies anf Tofu</span><span class="pull-right">9.00</span></p>
                         <p class="food-title"><span>Chicken/Beef</span><span class="pull-right">11.00</span></p>
                         <p class="food-title"><span>Prawwns</span><span class="pull-right">12</span></p>
                     </div>
-                    <div class="col-xs-12 col-sm-6 col-md-6 ">
+                    <div class="col-xs-12 col-sm-6 col-md-6 food">
                         <p class="food-title"><span>GCHILLI & BASIL STIR FRY</span><span class="pull-right"></span></p>
                         <p>A spicy & fragrant stir fry with London-grown Thai basil, onions & long beans. A Thai staple.</p>
                         <p class="food-title"><span>Veggies anf Tofu</span><span class="pull-right">8.00</span></p>
                         <p class="food-title"><span>Chicken/Beef</span><span class="pull-right">9.50</span></p>
                         <p class="food-title"><span>Prawwns</span><span class="pull-right">12</span></p>
                     </div>
-                    <div class="col-xs-12  col-sm-6 col-md-6">
-                        <p class="food title"><span>CHICKEN & CASHEW NUTS</span><span class="pull-right">10</span></p>
+                    <div class="col-xs-12  col-sm-6 col-md-6 food">
+                        <p class="food-title"><span>CHICKEN & CASHEW NUTS</span><span class="pull-right">10</span></p>
 
                         <p>Stir fried with mushroom in Rosa's homemade sauce.</p>
                     </div>
-                    <div class="col-xs-12  col-sm-6 col-md-6">
-                        <p class="food title"><span>ROASTED DUCK CURRY</span><span class="pull-right">13</span></p>
+                    <div class="col-xs-12  col-sm-6 col-md-6 food">
+                        <p class="food-title"><span>ROASTED DUCK CURRY</span><span class="pull-right">13</span></p>
 
                         <p>Red curry with a hint of sweetness from grapes, pineapple & cherry tomatoes.</p>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="clearfix"></div>
+        <div class="hr"></div>
             <div class="col-xs-12 col-sm-12 col-md-12">
                 <div class="row">
-                    <h2 class="col-xs-12 col-md-2">Sides</h2>
+                <div  class="col-xs-12 col-md-2 menu-img">
+                    <h2 class="menu-title">Sides</h2>
+                    <img src="images/sides1.jpg" style="width: 100%;">
+                    </div>
                     <div class="col-xs-12 col-md-10">
-                        <div class="col-xs-12  col-sm-6 col-md-6">
-                            <p class="food title"><span>STEAMED JASMINE RICE</span><span class="pull-right">2.50</span></p>
+                        <div class="col-xs-12  col-sm-6 col-md-6 food">
+                            <p class="food-title"><span>STEAMED JASMINE RICE</span><span class="pull-right">2.50</span></p>
                         </div>
-                        <div class="col-xs-12 col-sm-6 col-md-6">
+                        <div class="col-xs-12 col-sm-6 col-md-6 food">
                             <p class="food-title"><span>EGG FRIED RICE</span><span class="pull-right">4.00</span></p>
                            
                         </div>
-                         <div class="col-xs-12  col-sm-6 col-md-6">
-                            <p class="food title"><span>STEAMED COCONUT RICE</span><span class="pull-right">4.00</span></p>
+                         <div class="col-xs-12  col-sm-6 col-md-6 food">
+                            <p class="food-title"><span>STEAMED COCONUT RICE</span><span class="pull-right">4.00</span></p>
                         </div>
-                         <div class="col-xs-12  col-sm-6 col-md-6">
-                            <p class="food title"><span>BROWN RICE</span><span class="pull-right">3.50</span></p>
+                         <div class="col-xs-12  col-sm-6 col-md-6 food">
+                            <p class="food-title"><span>BROWN RICE</span><span class="pull-right">3.50</span></p>
                         </div>
-                         <div class="col-xs-12  col-sm-6 col-md-6">
-                            <p class="food title"><span>PRAWN CRACKERS</span><span class="pull-right">2.50</span></p>
+                         <div class="col-xs-12  col-sm-6 col-md-6 food">
+                            <p class="food-title"><span>PRAWN CRACKERS</span><span class="pull-right">2.50</span></p>
+                        </div>
+                        <div class="col-xs-12  col-sm-6 col-md-6 food">
+                            <p class="food-title"><span>FRIES VEGGIES</span><span class="pull-right">4.00</span></p>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="clearfix"></div>
+            <br>
+            <br>
         </div>
     </div>
 
