--- a/menu.html
+++ b/menu.html
@@ -244,7 +244,35 @@
                         </div>
                     </div>
                 </div>
+                    <div class="clearfix"></div>
+        <div class="hr"></div>
             </div>
+                  <div class="col-xs-12 col-sm-12 col-md-12">
+            <div class="row">
+            <div class="col-xs-12 col-md-2 menu-img">
+                <h2 class="menu-title">Desserts</h2>
+                <img src="images/dessert1.jpg" style="width: 100%;">
+                </div>
+                <div class="col-xs-12 col-md-10">
+                    <div class="col-xs-12  col-sm-6 col-md-6 food">
+                        <p class="food-title"><span>STICKYy RICE WITH CUSTARD    </span><span class="pull-right">5.50</span></p>
+
+                        <p>Dessert consists of sweet sticky rice topped with a slice of creamy custard.</p>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-6 food">
+                        <p class="food-title"><span>COCONUT RICE DUMPLINGS</span><span class="pull-right">5.00</span></p>
+                        <p>These traditional coconut and rice flour dumplings are cooked into little kettle cakes and often topped with a choice of green onions, sweet corn, taro, or just plain.</p>
+
+                    </div>
+                     <div class="col-xs-12 col-sm-6 col-md-6 food">
+                        <p class="food-title"><span>SWEET THAI PANCAKE</span><span class="pull-right">6.00</span></p>
+                        <p>Flour and coconut milk with yeast, salt and sugar mixed into a pancake. Eaten with foi tong or an assortment of toppings.</p>
+
+                    </div>
+                </div>
+            </div>
+        
+        </div>
             <div class="clearfix"></div>
             <br>
             <br>
