icons added index changed

--- a/menu.html
+++ b/menu.html
@@ -255,7 +255,7 @@
                 </div>
                 <div class="col-xs-12 col-md-10">
                     <div class="col-xs-12  col-sm-6 col-md-6 food">
-                        <p class="food-title"><span>STICKYy RICE WITH CUSTARD    </span><span class="pull-right">5.50</span></p>
+                        <p class="food-title"><span>STICKY RICE WITH CUSTARD    </span><span class="pull-right">5.50</span></p>
 
                         <p>Dessert consists of sweet sticky rice topped with a slice of creamy custard.</p>
                     </div>
