--- a/index.html
+++ b/index.html
@@ -109,37 +109,9 @@
         </div>
     </div>
 </header>
-<div class="container_home_page">
-    <div class="row ">
-    <a href="menu.html">
-       <div class="col-xs-12 col-sm-3 images">
-      <img class="menu-img img-thumbnail" src="images/starter.jpg" alt="Starters" >
-      <h1 class="menu-items">Starters</h1>
-    </div>
-    </a>
-    <a href="menu.html">
-    <div class="col-xs-12 col-sm-3 images">
-        
-        <img class="menu-img img-thumbnail"  src="images/salad.jpg" alt="Salads">
-        <h1 class="menu-items">Salads</h1>
-    </div>
-    </a>
-    <a href="menu.html">
-    <div class="col-xs-12 col-sm-3 images">
-        <img class="menu-img img-thumbnail" src="images/green-curry.jpg" alt="Mains">
-        <h1 class="menu-items">Mains</h1>
-    </div>
-    </a>
-    <a href="menu.html">
-    <div class="col-xs-12 col-sm-3 images">
-        <img  class="menu-img img-thumbnail"  src="images/desserts.jpg" alt="Desserts" >
-        <h1 class="menu-items">Desserts</h1>
-    </div>
-    </a>
-</div>
-</div>
+
 <div class="container">
-<div class="row">
+<div class="row promotions">
     <div class="col-xs-12 col-sm-3">
         <p style="padding:20px;"></p>
         <h3 align=center>This Month's Promotions</h3>
@@ -161,7 +133,7 @@
 </div>
 
 
-<div class="row">
+<div class="row promotions">
     <div class="col-xs-12 col-sm-3">
         <p style="padding:20px;"></p>
         <h3 align=center>All Time Favourite</h3>
@@ -183,7 +155,7 @@
     </div>
 </div>
 
-<div class="row">
+<div class="row promotions">
     <div class="col-xs-12 col-sm-3">
         <p style="padding:20px;"></p>
         <h3 align=center>Our Speciality</h3>
@@ -205,6 +177,20 @@
             </div>
         </div>
     </div>
+    <div class="row promotions">
+    <div class="col-xs-12 col-sm-12">
+        <p style="padding:20px;"></p>
+        <h3 align=center>Follow Us</h3>
+        <div class="col-xs-12 col-sm-12 folow-us">
+            <ul class="follow nav navbar-nav">
+            <li><a href="http://www.facebook.com/"> <i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
+            <li><a href="http://twitter.com/"> <i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a></li>
+            <li><a href="http://youtube.com/"> <i class="fa fa-youtube fa-2x" aria-hidden="true"></i></a></li>
+            <li><a href="http://instagram.com/"> <i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
+        </ul>
+        </div>
+    </div>
+ </div>
 </div>
 <br>
 <footer>
