some minor changes

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/css.css">
 </head>
 <body>
- <nav class="navbar navbar-inverse navbar-fixed-top">
+   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed"
@@ -35,12 +35,12 @@
                 role="button" aria-haspopup="true"
                 aria-expanded="false">Menu<span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a href="menu.html">Appetizers</a></li>
-                    <li><a href="menu.html">Appetizers</a></li>
-                    <li><a href="menu.html">Appetizers</a></li>
+                    <li><a href="menu.html">Starters</a></li>
+                    <li><a href="menu.html">Mains</a></li>
+                    <li><a href="menu.html">Sides</a></li>
                     <li role="separator" class="divider"></li>
                     <li class="dropdown-header">Specials</li>
-                    <li><a href="#">Appetizers</a></li>
+                    <li><a href="#">Menu</a></li>
                 </ul>
 
             </li>
@@ -112,17 +112,17 @@
 <!-- Main component for a primary marketing message or call to action -->
 
 <div class="container">
-   <div class="row">
-       <div class="col-xs-12 col-sm-12 ">
+ <div class="row">
+     <div class="col-xs-12 col-sm-12 ">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2487.298087673912!2d0.005529715068334077!3d51.43431932386602!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a9f905335637%3A0x3926877fda2dee79!2s121+Waters+Rd%2C+London+SE6+1UJ!5e0!3m2!1sen!2suk!4v1501872080058" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div> 
     <div class="row row-content">
         <div class="row">
-           <div class="col-xs-12">
+         <div class="col-xs-12">
             <h3 align="center">Get in touch</h3> 
         </div>
         <div class="col-xs-12 col-sm-3" >
-            <h5>Where to find us</h5>
+            <h5 class="find-us">WHERE TO FIND US</h5>
             <address>
               <p><i class="fa fa-map-marker" aria-hidden="true"></i>  121, Waters Road LONDON</p>
               <p><i class="fa fa-phone "></i>  +44 1234 5678</p>
@@ -171,6 +171,20 @@
 </div>
 </div>
 </div>  
+<div class="row promotions">
+    <div class="col-xs-12 col-sm-12">
+        <p style="padding:20px;"></p>
+        <h3 align=center>Follow Us</h3>
+        <div class="col-xs-12 folow-us">
+            <ul class="follow">
+                <li><a href="http://www.facebook.com/"> <i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
+                <li><a href="http://twitter.com/"> <i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a></li>
+                <li><a href="http://youtube.com/"> <i class="fa fa-youtube fa-2x" aria-hidden="true"></i></a></li>
+                <li><a href="http://instagram.com/"> <i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
+            </ul>
+        </div>
+    </div>
+</div>
 </div>
 </div>
 
