--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/css.css">
 </head>
 <body>
- <nav class="navbar navbar-inverse navbar-fixed-top">
+   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed"
@@ -35,13 +35,12 @@
                 role="button" aria-haspopup="true"
                 aria-expanded="false">Menu<span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a href="menu.html">Appetizers</a></li>
-                    <li><a href="menu.html">Appetizers</a></li>
-                    <li><a href="menu.html">Appetizers</a></li>
+                    <li><a href="menu.html">Starters</a></li>
+                    <li><a href="menu.html">Mains</a></li>
+                    <li><a href="menu.html">Sides</a></li>
                     <li role="separator" class="divider"></li>
                     <li class="dropdown-header">Specials</li>
-                    <li><a href="#">Appetizers</a></li>
-                    
+                    <li><a href="#">Menu</a></li>
                 </ul>
 
             </li>
@@ -91,120 +90,120 @@
         </div>
     </div>
 </div>
-<header class="jumbotron jumb_home">
+<header class="jumbotron jumb_about">
 
     <!-- Main component for a primary marketing message or call to action -->
 
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-10">
-                <h1 class="jumbo-heading ">Thai Food Experience</h1>
+                <h1 class="jumbo-heading">Thai Food Experience</h1>
                 <p style="padding:40px;"></p>
                 <p>We take inspiration from the Thai's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
             </div>
             <div class="col-xs-12 col-sm-2">
                 <p style="padding: 40px;"></p>
-                <a type="button" class="btn btn-warning btn reserve" href="#reservation">Book a Table</a>
+                <a type="button" class="btn btn-warning btn-block reserve" href="#reservation">Book a Table</a>
             </div>
         </div>
     </div>
 </header>
 
 <div class="container">
-<div class="row promotions">
-    <div class="col-xs-12 col-sm-3">
-        <p style="padding:20px;"></p>
-        <h3 align=center>This Month's Promotions</h3>
-    </div>
-    <div class="col-xs-12 col-sm-9">
-        <div class="row">
-            <div class="col-xs-12 col-sm-3">
-                <a href="#">
-                    <img class=" img-thumbnail" src="images/pad_thai.jpg" alt="Our Best Pizza" >
-                </a>
-            </div>
-            <div class="col-xs-12 col-sm-9">
-                <h2 align=center>Pad Thai </h2>
-                <p>Pad Thai is now one of the world's favorite noodle dishes, and luckily it's easy to make at home with these delicious Pad Thai recipes. Choose from chicken pad thai to shrimp or vegetarian pad thai.</p>
-                <p><a  href="#">More &raquo;</a></p>
-            </div>
+    <div class="row promotions">
+        <div class="col-xs-12 col-sm-3">
+            <p style="padding:20px;"></p>
+            <h3 align=center>This Month's Promotions</h3>
         </div>
-    </div>
-</div>
-
-
-<div class="row promotions">
-    <div class="col-xs-12 col-sm-3">
-        <p style="padding:20px;"></p>
-        <h3 align=center>All Time Favourite</h3>
-    </div>
-
-    <div class="col-xs-12 col-sm-9">
-        <div class="row">
-            <div class="col-xs-12 col-sm-3">
-                <a href="#">
-                    <img class=" img-thumbnail" src="images/soup.jpg" alt="Our Best Pizza" >
-                </a>
-            </div>
-            <div class="col-xs-12 col-sm-9">
-                <h2 align=center>Thai chicken and sweet potato soup</h2>
-                <p>A smooth and and spicy chicken soup with a vibrant colour that's packed full of Asian aromatics.</p>
-                <p><a  href="#">More &raquo;</a></p>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="row promotions">
-    <div class="col-xs-12 col-sm-3">
-        <p style="padding:20px;"></p>
-        <h3 align=center>Our Speciality</h3>
-    </div>
-
-    <div class="col-xs-12 col-sm-9">
-        <div class="row">
-            <div class="col-xs-12 col-sm-3">
-                <a href="#">
-                    <img class=" img-thumbnail" src="images/lobster.jpg" alt="Our Best Pizza" >
-                </a>
-            </div>
-            <div class="col-xs-12 col-sm-9">
-                <h2 align=center>Lime, Thai Chili and Cilantro Grilled Lobster</h2>
-                <p>Bacon ipsum dolor amet meatloaf cupim ground round strip steak, 
-                    sausage turducken bacon beef ribs corned beef frankfurter turkey filet mignon. Fatback doner ham ham hock turducken.</p>
+        <div class="col-xs-12 col-sm-9">
+            <div class="row">
+                <div class="col-xs-12 col-sm-3">
+                    <a href="#">
+                        <img class=" img-thumbnail" src="images/pad_thai.jpg" alt="Our Best Pizza" style="width: 100%;" >
+                    </a>
+                </div>
+                <div class="col-xs-12 col-sm-9">
+                    <h2 align=center>Pad Thai </h2>
+                    <p>Pad Thai is now one of the world's favorite noodle dishes, and luckily it's easy to make at home with these delicious Pad Thai recipes. Choose from chicken pad thai to shrimp or vegetarian pad thai.</p>
                     <p><a  href="#">More &raquo;</a></p>
                 </div>
             </div>
         </div>
     </div>
+
+
     <div class="row promotions">
-    <div class="col-xs-12 col-sm-12">
-        <p style="padding:20px;"></p>
-        <h3 align=center>Follow Us</h3>
-        <div class="col-xs-12 col-sm-12 folow-us">
-            <ul class="follow nav navbar-nav">
-            <li><a href="http://www.facebook.com/"> <i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
-            <li><a href="http://twitter.com/"> <i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a></li>
-            <li><a href="http://youtube.com/"> <i class="fa fa-youtube fa-2x" aria-hidden="true"></i></a></li>
-            <li><a href="http://instagram.com/"> <i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
-        </ul>
+        <div class="col-xs-12 col-sm-3">
+            <p style="padding:20px;"></p>
+            <h3 align=center>All Time Favourite</h3>
         </div>
-    </div>
- </div>
-</div>
-<br>
-<footer>
-    <div class="container">
-        <div class="row">             
-            <div class="col-xs-12">
-                <p style="margin-bottom:15px;"></p>
-                <p align=center>© Copyright 2015 Thai Food Experience</p>
+
+        <div class="col-xs-12 col-sm-9">
+            <div class="row">
+                <div class="col-xs-12 col-sm-3">
+                    <a href="#">
+                        <img class=" img-thumbnail" src="images/soup.jpg" style="width: 100%;" alt="Our Best Pizza" >
+                    </a>
+                </div>
+                <div class="col-xs-12 col-sm-9">
+                    <h2 align=center>Thai chicken and sweet potato soup</h2>
+                    <p>A smooth and and spicy chicken soup with a vibrant colour that's packed full of Asian aromatics.</p>
+                    <p><a  href="#">More &raquo;</a></p>
+                </div>
             </div>
         </div>
     </div>
-</footer>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
+
+    <div class="row promotions">
+        <div class="col-xs-12 col-sm-3">
+            <p style="padding:20px;"></p>
+            <h3 align=center>Our Speciality</h3>
+        </div>
+
+        <div class="col-xs-12 col-sm-9">
+            <div class="row">
+                <div class="col-xs-12 col-sm-3">
+                    <a href="#">
+                        <img class=" img-thumbnail" src="images/lobster.jpg" alt="Our Best Pizza" >
+                    </a>
+                </div>
+                <div class="col-xs-12 col-sm-9">
+                    <h2 align=center>Lime, Thai Chili and Cilantro Grilled Lobster</h2>
+                    <p>Bacon ipsum dolor amet meatloaf cupim ground round strip steak, 
+                        sausage turducken bacon beef ribs corned beef frankfurter turkey filet mignon. Fatback doner ham ham hock turducken.</p>
+                        <p><a  href="#">More &raquo;</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row promotions">
+            <div class="col-xs-12 col-sm-12">
+                <p style="padding:20px;"></p>
+                <h3 align=center>Follow Us</h3>
+                <div class="col-xs-12 folow-us">
+                    <ul class="follow">
+                        <li><a href="http://www.facebook.com/"> <i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
+                        <li><a href="http://twitter.com/"> <i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a></li>
+                        <li><a href="http://youtube.com/"> <i class="fa fa-youtube fa-2x" aria-hidden="true"></i></a></li>
+                        <li><a href="http://instagram.com/"> <i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
+    <footer>
+        <div class="container">
+            <div class="row">             
+                <div class="col-xs-12">
+                    <p style="margin-bottom:15px;"></p>
+                    <p align=center>© Copyright 2015 Thai Food Experience</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
